# bscal

./: .pre-commit-config.yaml  LICENSE  README.md  bscal.py  pyproject.toml
.github/workflows/: build.yml  ci.yml
tests/: test_cli.py  test_conversion.py
