[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]

[project]
name = "bscal"
readme = "README.md"
description = "Calendar for Bikram Sambat"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]

[project.scripts]
bscal = "bscal:cal"
bsdate = "bscal:bsdate"

[project.optional-dependencies]
tests = ["pytest", "hypothesis"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools_scm]

[tool.mypy]
check_untyped_defs = true
files = ["bscal.py"]
strict = true

[tool.ruff]
ignore = ["ISC001", "S101"]
select = [
    "F", "E", "W", "C90", "I", "N", "UP", "YTT", "ASYNC", "S", "BLE", "B", "A", "C4", "T10",
    "EXE", "ISC", "ICN", "G", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET",
    "SLOT", "SIM", "TID", "TCH", "ARG", "PGH", "PLC", "PLE", "PLR", "PLW", "TRY",
    "FLY", "PERF101", "RUF",
]
show-source = true
show-fixes = true

[tool.ruff.format]
preview = true

[tool.ruff.flake8-type-checking]
strict = true

[tool.ruff.flake8-unused-arguments]
ignore-variadic-names = true
