[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77", "setuptools_scm[toml]>=8"]

[project]
name = "bscal"
readme = "README.md"
description = "Calendar for Bikram Sambat"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]

[project.scripts]
bscal = "bscal:cal"
bsdate = "bscal:bsdate"

[dependency-groups]
tests = ["pytest", "hypothesis"]
dev = [{ include-group = 'tests' }]

[tool.setuptools_scm]

[tool.mypy]
check_untyped_defs = true
files = ["bscal.py", "tests"]
strict = true

[tool.ruff]
output-format = "full"
show-fixes = true

[tool.ruff.lint]
ignore = [
    "ISC001",
    "S101",
    "PLC0415",
    "D1",
    "FA",
    "T201",
    "EM",
    "FBT",
    "ERA",
    "D2",
    "DTZ",
    "COM",
]
select = ["ALL"]

[tool.ruff.format]
preview = true

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
